--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=RestApiExample
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:CFDVtCG9oQ5WrR80tQHRylCjBeOxW29xK4kRWxhEUrU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
+APP_SWAGGER_DOCS=api/docs
 
-APP_LOCALE=en
+APP_LOCALE=ru
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -14,17 +15,17 @@ APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=restapiex
+DB_USERNAME=restapiex
+DB_PASSWORD=restapiex
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -62,3 +63,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+TOKEN_LIFE_TIME=86400
+
+L5_SWAGGER_UI_PERSIST_AUTHORIZATION=true
+L5_SWAGGER_DEV_HOST=http://127.0.0.1:8000/api
+L5_SWAGGER_PROD_HOST=http://127.0.0.1:8001/api
