Add: очереди отправки писем

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:CFDVtCG9oQ5WrR80tQHRylCjBeOxW29xK4kRWxhEUrU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 APP_SWAGGER_DOCS=api/docs
 
 APP_LOCALE=ru
@@ -35,6 +35,7 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
+STORAGE_DRIVER_FOR_IMAGES=public
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
@@ -47,13 +48,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_MAILER=dev
+MAIL_HOST=app.debugmail.io
+MAIL_PORT=25
+MAIL_USERNAME=4943baa6-b9c2-4ce0-be67-a5752f51ef7a
+MAIL_PASSWORD=b4faca5f-65f2-4dd6-b2a8-6cb13b6e1b9b
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="alexandr.statut@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
